<resources>
    <string name="app_name">AndroidDarkThemeDemo</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="auto_battery">Auto Battery</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="light_indicator">Light Indicator</string>
    <string name="switch_theme_daynight">Switch Theme(Current DayNight)</string>
    <string name="switch_theme_light">Switch Theme(Current Light Force Dark)</string>
    <string name="not_define_night_color">Not Define Night Color</string>
    <string name="define_night_color">Defined Night Color</string>
</resources>